# double-pendulum

./: .gitignore  double-pendulum-env.py  env.py  eval.py  generate_data.py  physics.py  pyproject.toml  test.py  test_generate_data.py  train.ipynb  utils.py
models/: dynamics.py  encoders.py  transformer.py
