[project]
name = "double-pendulum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.3",
    "h5py>=3.16.0",
    "hdf5plugin>=7.0.0",
    "matplotlib>=3.11.0",
    "mujoco>=3.4.0",
    "torch>=2.12.0",
    "tqdm>=4.68.3",
]
